After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 721054 - (totem:629): Gtk-WARNING **: Calling Inhibit failed: GDBus.Error:org.freedesktop.DBus.Error.ServiceUnknown: The name org.gnome.SessionManager was not provided by any .service files
(totem:629): Gtk-WARNING **: Calling Inhibit failed: GDBus.Error:org.freedesk...
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Movie player
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-12-25 22:37 UTC by Michal 'hramrach' Suchanek
Modified: 2014-01-07 11:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screensaver: Only try to inhibit once (2.15 KB, patch)
2014-01-07 09:56 UTC, Bastien Nocera
committed Details | Review

Description Michal 'hramrach' Suchanek 2013-12-25 22:37:58 UTC
totem is flooding the terminal with the message

(totem:629): Gtk-WARNING **: Calling Inhibit failed: GDBus.Error:org.freedesktop.DBus.Error.ServiceUnknown: The name org.gnome.SessionManager was not provided by any .service files
Comment 1 Bastien Nocera 2014-01-07 09:56:02 UTC
Created attachment 265517 [details] [review]
screensaver: Only try to inhibit once

This stops plenty of warnings appearing on the command-line when
gtk_application_inhibit() fails. It can fail for a number of reasons,
but the documentation's only hint is:
If the platform does not support inhibiting or the request failed for
some reason, 0 is returned.

So only try to disable the screensaver once.
Comment 2 Bastien Nocera 2014-01-07 10:10:05 UTC
Fixed in gnome-3-10 and master

Attachment 265517 [details] pushed as 2dc3096 - screensaver: Only try to inhibit once
Comment 3 Michal 'hramrach' Suchanek 2014-01-07 11:23:24 UTC
This will, however, make totem completely unusable outside gnome.

In the meantime I implemented a service that resets the idle timer whenever gtk_application_inhibit() is called but since it is now called only once the screensaver will activate nonetheless.